Fix secondary header z-index

--- a/packages/block-library/src/blocks/header/scss/_header-secondary.scss
+++ b/packages/block-library/src/blocks/header/scss/_header-secondary.scss
@@ -1,6 +1,6 @@
 .novablocks-header--secondary {
   width: 100%;
-  z-index: 1100;
+  z-index: 2001;
 
   opacity: 0;
   pointer-events: none;
